--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "npx playwright test",
     "format": "prettier --write .",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
