--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "prettier": "^3.3.3"
   },
   "dependencies": {
+    "@babel/parser": "^7.26.2",
+    "@babel/traverse": "^7.25.9",
     "dotenv": "^16.4.5"
   },
   "husky": {
