--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,22 +16,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
+      - name: Build Docker image
+        run: docker build -t pw-tests-image .
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Run Playwright tests inside Docker container
+        run: docker run --rm -v "${{ github.workspace }}/allure-results:/app/allure-results" pw-tests-image
 
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps
-
-      - name: Run Playwright tests
-        run: npx playwright test
-
-      - name: Upload Allure results
-        uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@master
         with:
           name: allure-results
           path: allure-results
@@ -45,7 +36,7 @@ jobs:
           ref: gh-pages
           path: gh-pages
 
-      - name: Generate Allure report
+      - name: Generate allure
         uses: simple-elf/allure-report-action@master
         if: always()
         id: allure-report
@@ -56,7 +47,7 @@ jobs:
           allure_history: allure-history
           keep_reports: 1
 
-      - name: Deploy report to GitHub Pages
+      - name: Deploy report to Github Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v3
         with:
