--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,12 +6,6 @@ on:
   pull_request:
     branches: [main, master]
 
-env:
-  ALLURE_TOKEN: 011fe067-9a03-49bf-b1ca-c7db4b20bbaf
-  ALLURE_ENDPOINT: https://allure.autotests.cloud/
-  ALLURE_PROJECT_ID: 4539
-  ALLURE_RESULTS: allure-results
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -34,11 +28,11 @@ jobs:
           path: allure-results
           retention-days: 1
       
-      - name: Install allurectl
-        uses: allure-framework/setup-allurectl@v1 
-      
-      - name: Send report to Allure TestOps
-        run: allurectl upload --endpoint $ALLURE_ENDPOINT --project-id $ALLURE_PROJECT_ID --token $ALLURE_TOKEN $ALLURE_RESULTS
+      - uses: allure-framework/setup-allurectl@v1
+        with:
+          allure-endpoint: https://allure.autotests.cloud/
+          allure-token: 011fe067-9a03-49bf-b1ca-c7db4b20bbaf
+          allure-project-id: 4539
 
       - name: Get Allure history
         uses: actions/checkout@v3
