--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     branches: [main, master]
 
+
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -34,13 +36,17 @@ jobs:
           allure-token: 011fe067-9a03-49bf-b1ca-c7db4b20bbaf
           allure-project-id: 4539
         
-      - name: get Allur launch  
+      - name: Get Allure launch 
+        id: status 
         run: |
           export $(allurectl job-run env)
           echo "[Allure Report]($ALLURE_LAUNCH_URL)" >> $GITHUB_STEP_SUMMARY
           echo allure-report-link=$ALLURE_LAUNCH_URL >> $GITHUB_OUTPUT
           echo allure-launch-id=$ALLURE_LAUNCH_ID >> $GITHUB_OUTPUT
           printenv | grep ALLURE_ 
+        env: 
+            ALLURE_LAUNCH_URL: $ALLURE_LAUNCH_URL
+
 
       - name: Run Playwright tests with Allure
         run: |
@@ -89,6 +95,6 @@ jobs:
           elif [ "${{ job.status }}" == "failure" ]; then
           STATUS="Tests failed"
           fi
-          REPORT_URL=$ALLURE_LAUNCH_URL
+          REPORT_URL=${{env.ALLURE_LAUNCH_URL}}
           MESSAGE="$STATUS. View the report at $REPORT_URL"
           curl -s -X POST https://api.telegram.org/bot7219043015:AAFQKdgpzThlEqdoAxMh06ylpBXFy7n7ngo/sendMessage -d chat_id=-4783026865 -d text="$MESSAGE"
