--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -86,10 +86,10 @@ jobs:
           publish_dir: allure-history
           publish_branch: gh-pages
 
-          - name: Prepare report info
-          if: always()
-          id: prepare-report-info
-          run: |
+      - name: Prepare report info
+        if: always()
+        id: prepare-report-info
+        run: |
             filePath="allure-results/widgets/suites.json"
             if [ -f "$filePath" ]; then
               PASSED=$(jq '[.children[] | select(.status == "passed")] | length' $filePath)
@@ -117,5 +117,5 @@ jobs:
           STATUS="Tests failed"
           fi
           REPORT_URL=${{ steps.status.outputs.allure-report-link }}
-          MESSAGE="$STATUS. View the report at $REPORT_URL\n\nTotal: ${{ env.TOTAL }}\nPassed: ${{ env.PASSED }}\nFailed: ${{ env.FAILED }}\nSkipped: ${{ env.SKIPPED }}\nBroken: ${{ env.BROKEN }}"
+          MESSAGE="$STATUS. View the report at $REPORT_URL\n\nTotal: $TOTAL\nPassed: $PASSED\nFailed: $FAILED\nSkipped: $SKIPPED\nBroken: $BROKEN"
           curl -s -X POST https://api.telegram.org/bot7219043015:AAFQKdgpzThlEqdoAxMh06ylpBXFy7n7ngo/sendMessage -d chat_id=-4783026865 -d text="$MESSAGE"
