--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -122,5 +122,5 @@ jobs:
           STATUS="Tests failed"
           fi
           REPORT_URL=${{ steps.status.outputs.allure-report-link }}
-          MESSAGE="$STATUS. View the report at $REPORT_URL\n\nTotal: ${{ env.TOTAL }}\nPassed: ${{ env.PASSED }}\nFailed: ${{ env.FAILED }}\nSkipped: ${{ env.SKIPPED }}\nFlaky: ${{ env.FLAKY }}"
+          MESSAGE="$STATUS. View the report at $REPORT_URL Total: ${{ env.TOTAL }} Passed: ${{ env.PASSED }} Failed: ${{ env.FAILED }} Skipped: ${{ env.SKIPPED }} Flaky: ${{ env.FLAKY }}"
           curl -s -X POST https://api.telegram.org/bot7219043015:AAFQKdgpzThlEqdoAxMh06ylpBXFy7n7ngo/sendMessage -d chat_id=-4783026865 -d text="$MESSAGE"
