--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -33,7 +33,7 @@ jobs:
         uses: allure-framework/setup-allurectl@v1
         with:
           allure-endpoint: https://allure.autotests.cloud/
-          allure-token: 011fe067-9a03-49bf-b1ca-c7db4b20bbaf
+          allure-token: ${{ secrets.ALLURE_TOKEN }}
           allure-project-id: 4539
         
       - name: Get Allure launch 
@@ -83,13 +83,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: allure-history
           publish_branch: gh-pages
-
-      - uses: daun/playwright-report-summary@v3
-        id: playwright-report-summary
-        if: always() && job.status != 'cancelled'
-        with:
-          report-file: test-results/test-results.json           
-
+       
       - name: Prepare report info
         if: always()
         id: prepare-report-info
@@ -123,4 +117,4 @@ jobs:
           fi
           REPORT_URL=${{ steps.status.outputs.allure-report-link }}
           MESSAGE="$STATUS. View the report at $REPORT_URL Total: ${{ env.TOTAL }} Passed: ${{ env.PASSED }} Failed: ${{ env.FAILED }} Skipped: ${{ env.SKIPPED }} Flaky: ${{ env.FLAKY }}"
-          curl -s -X POST https://api.telegram.org/bot7219043015:AAFQKdgpzThlEqdoAxMh06ylpBXFy7n7ngo/sendMessage -d chat_id=-4783026865 -d text="$MESSAGE"
+          curl -s -X POST https://api.telegram.org/bot${{secrets.TELEGRAM_BOT_API_TOKEN}}/sendMessage -d chat_id=-4783026865 -d text="$MESSAGE"
