--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@babel/parser": "^7.26.2",
     "@babel/traverse": "^7.25.9",
+    "@faker-js/faker": "^9.3.0",
     "dotenv": "^16.4.5"
   },
   "husky": {
